feat: filtering first pass
